<resources>
    <!--  For activity SettingsActivity -->
    <string name="settings_share_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="settings_share_title">Поделиться через</string>
    <string name="settings_support_email">mr.friderick@ya.ru</string>
    <string name="settings_support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="settings_support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="settings_agreement_link">https://yandex.ru/legal/practicum_offer/</string>

    <!--  For activity fragments MediaActivity -->
    <string name="favorites_track_title">Избранные треки</string>
    <string name="playlist_title">Плейлисты</string>

    <!--  For layout activity_main -->
    <string name="app_name">Playlist Maker</string>
    <string name="main_title">Playlist maker</string>
    <string name="main_button_search">Поиск</string>
    <string name="main_button_media">Медиатека</string>
    <string name="main_button_settings">Настройки</string>

    <!--  For layout activity_settings -->
    <string name="settings_option_dark_mode">Темная тема</string>
    <string name="settings_option_share">Поделиться приложением</string>
    <string name="settings_option_support">Написать в поддержку</string>
    <string name="settings_option_agreement">Пользовательское соглашение</string>

    <!--  For layout activity_search -->
    <string name="search_not_found_text">Ничего не нашлось</string>
    <string name="search_failure_text">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="search_button_refresh_text">Обновить</string>
    <string name="search_history_title">Вы искали</string>
    <string name="search_clear_history_text">Очистить историю</string>

    <!--  For layout activity_audio_player -->
    <string name="description_button_back">Кнопка назад</string>
    <string name="player_time_text">Длительность</string>
    <string name="player_collection_text">Альбом</string>
    <string name="player_release_text">Год</string>
    <string name="player_genre_text">Жанр</string>
    <string name="player_country_text">Страна</string>
    <string name="description_button_add_playlist">Добавить в плейлист</string>
    <string name="description_button_play">Воспроизвести/пауза</string>
    <string name="description_button_add_favorite">Добавить в избранное</string>
    <string name="default_time_left">0:00</string>

    <!--  For layout activity_media -->
    <string name="media_toolbar">Медиатека</string>

    <!--  For layout fragment_favorites_tracks -->
    <string name="media_empty">Ваша медиатека пуста</string>

    <!--  For layout fragment_newplaylist -->
    <string name="playlist_empty">Вы не создали \n ни одного плейлиста</string>
    <string name="button_new_playlist">Новый плейлист</string>
    <string name="newplaylist_toolbar">Новый плейлист</string>
    <string name="newplaylist_title_hint">Название*</string>
    <string name="newplaylist_description_hint">Описание</string>
    <string name="newplaylist_button_create">Создать</string>
    <string name="bottomsheet_title">Добавить в плейлист</string>
    <string name="newplaylist_exit_question">Завершить создание плейлиста?</string>
    <string name="newplaylist_exit_message">Все несохраненные данные будут потеряны</string>
    <string name="newplaylist_exit_negative_button">Отмена</string>
    <string name="newplaylist_exit_positive_button">Завершить</string>
    <string name="newplaylist_edit_title">Редактировать</string>
    <string name="newplaylist_edit_button_text">Сохранить</string>

    <!--  For layout fragment_playlist -->
    <string name="playlist_longclick_message">Хотите удалить трек?</string>
    <string name="playlist_longlick_negative_button">НЕТ</string>
    <string name="playlist_longlick_positive_button">ДА</string>
    <string name="playlistmenu_button_share">Поделиться</string>
    <string name="playlistmenu_button_edit">Редактировать информацию</string>
    <string name="playlistmenu_button_delete">Удалить плейлист</string>
    <string name="playlist_menu_delete_message">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="playlist_empty_tracks">В плейлист не добавлено \n еще ни одного трека</string>
    <string name="playlist_no_track_message">В плейлист еще не добавлен ни один трек :(</string>
    <string name="playlist_delete_title">Удалить плейлист</string>
    <string name="playlist_delete_positive_button">Удалить</string>
    <string name="playlist_delete_negative_button">Отмена</string>
    <string name="playlist_create_error">Не удалось создать плейлист</string>
    <string name="playlist_create_success">Плейлист \"%1$s\" создан</string>
    <string name="playlist_track_allready_add">Трек уже добавлен в плейлист \"%1$s\"</string>
    <string name="playlist_track_success_add">Добавлено в плейлист \"%1$s\"</string>

    <!--  For layout element_playlist -->
    <plurals name="tracks_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>

    <plurals name="playlist_time">
        <item quantity="one">%s минута</item>
        <item quantity="few">%s минуты</item>
        <item quantity="many">%s минут</item>
        <item quantity="other">%s минут</item>
    </plurals>
</resources>