<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/screen_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_screen_default"
    android:orientation="vertical">

    <Toolbar
        android:id="@+id/settings_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:navigationIcon="@drawable/ic_arrow"
        android:title="@string/main_button_settings"
        android:titleTextAppearance="@style/toolbar_settings" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/theme_switcher"
        style="@style/view_settings"
        android:gravity="center_vertical"
        android:text="@string/settings_option_dark_mode"
        app:thumbTint="@color/thumb_selector"
        app:trackTint="@color/track_selector" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/share"
        style="@style/view_settings"
        android:drawableEnd="@drawable/ic_share"
        android:text="@string/settings_option_share" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/support"
        style="@style/view_settings"
        android:drawableEnd="@drawable/ic_support"
        android:text="@string/settings_option_support" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/agreement"
        style="@style/view_settings"
        android:drawableEnd="@drawable/ic_arrow_forward"
        android:text="@string/settings_option_agreement" />

</LinearLayout>