<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/screen_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main_screen"
    android:orientation="vertical">

    <Toolbar
        android:id="@+id/settings_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:title="@string/main_title"
        android:titleTextAppearance="@style/toolbar_main" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/search"
        style="@style/button_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/dp20"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:text="@string/main_button_search"
        app:icon="@drawable/ic_search" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/media"
        style="@style/button_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/dp20"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:text="@string/main_button_media"
        app:icon="@drawable/ic_media" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings"
        style="@style/button_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/dp20"
        android:layout_marginBottom="28dp"
        android:layout_weight="1"
        android:text="@string/main_button_settings"
        app:icon="@drawable/ic_settings" />
</LinearLayout>