<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/screen_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_screen_default"
    android:orientation="vertical">

    <Toolbar
        android:id="@+id/search_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:navigationIcon="@drawable/ic_arrow"
        android:title="@string/main_button_search"
        android:titleTextAppearance="@style/toolbar_settings" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/layout_search_background">

        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_mini_search"
            android:drawablePadding="8dp"
            android:hint="@string/main_button_search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="12dp"
            android:singleLine="true"
            android:textColor="@color/bg_dark_mode"
            android:textColorHint="@color/txt_search"
            android:textCursorDrawable="@drawable/ic_cursor" />

        <ImageView
            android:id="@+id/search_clear_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:paddingEnd="10dp"
            android:src="@drawable/ic_drop_input"
            android:visibility="gone" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/search_history"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:gravity="top|center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            style="@style/text_search_placeholder"
            android:textFontWeight="500"
            android:text="@string/search_history_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_history_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_clear_history"
            style="@style/button_search_refresh"
            android:layout_marginTop="38dp"
            android:text="@string/search_clear_history_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_not_found_placeholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="110dp"
        android:gravity="top|center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search_not_found" />

        <TextView
            style="@style/text_search_placeholder"
            android:text="@string/search_not_found_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_failure_placeholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="110dp"
        android:gravity="top|center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search_failure" />

        <TextView
            style="@style/text_search_placeholder"
            android:text="@string/search_failure_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_refresh"
            style="@style/button_search_refresh"
            android:layout_marginTop="24dp"
            android:text="@string/search_button_refresh_text" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="13dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:visibility="gone"/>

</LinearLayout>